e2e/tests/snapshots/local_pac__proxy.pac3.snap
---
source: e2e/tests/local_pac.rs
assertion_line: 39
expression: run_fun!(curl $pac_bind / proxy.pac ? xxx).unwrap()
---
// This file is automatically generated.

function FindProxyForURL(url, host) {
  // extract port number from url
  var port_match = url.match(/:(\d{0,5})/);
  var port = port_match[1] ? Number(port_match[1]) : null;

  if (shExpMatch(host, "*baidu.com*")) return "PROXY anyproxy:1080; DIRECT";
  // #baidu.com
  if (host === "cn.bing.com") return "PROXY anyproxy:1080; DIRECT";

  return "DIRECT";
}
